appId: com.companyname.thebutton.mobile
---
- launchApp

- assertVisible:
    id: CounterLabel
    text: "Value: 0"

- tapOn:
    id: MainButton

- assertVisible:
    id: CounterLabel
    text: "Value: 1"

- tapOn:
    id: MainButton

- assertVisible:
    id: CounterLabel
    text: "Value: 2"
